--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -61,7 +61,7 @@ page {
 .list-container {
   background-color: #fff;
   border-radius: 16rpx;
-  box-shadow: 0 4rpx 20rpx rgba(0,0,0,0.05);
+  box-shadow: 0 4rpx 20rpx rgba(0,0,0,0.05),0,0,0.05;
   padding: 30rpx;
   margin-bottom: 30rpx;
 }
@@ -128,4 +128,5 @@ page {
 .card {
   background-color: #fff;
   border-radius: 16rpx;
-  box-shadow: 0 4rpx 20rpx rgba(0
+  box-shadow: 0 4rpx 20rpx rgba(0,0,0,0.05)
+}
